[workspace]
members = [
    "controller",
    "agent",
    "healty_checker",
    "signal_checker",
    "certificate",
]
resolver = "2"
[workspace.dependencies]
local-ip-address = "0.6.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
# tokio = { version = "1.37.0", features = ["net", "time", "macros", "rt", "rt-multi-thread"] }
actix-web = "4.6.0"
reqwest = { version = "0.12.4", features = ["json"] }
actix-rt = "2.9.0"
log = "0.4.21"
jsonwebtoken = "9.3.0"
openssl = "0.10.64"
env_logger = "0.11.3"

