[package]
name = "controller"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
local-ip-address = {workspace = true}
reqwest = {workspace = true}
chrono = "0.4.38"
env_logger = {workspace = true} 
jsonwebtoken = {workspace = true}
log = {workspace = true}
healty_checker = {path = "../healty_checker"}
clap = { version = "4.5.4", features = ["derive"] }
signal_checker = {path = "../signal_checker"}
certificate = {path = "../certificate"}
actix-rt = {workspace = true}
actix = "0.13.3"
openssl = {workspace = true}
