[package]
name = "healty_checker"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
reqwest = {workspace = true}
log = {workspace = true}